[engine] several coding style fixes (Michael remarks)
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@1783725 13f79535-47bb-0310-9956-ffa450edef68